@@ -7,6 +7,7 @@ Change log 1.4 (under development)
 * EasyMock API extension now supports mock creation of classes whose hashCode implementation depends on constructor initialization.
 * It's now allowed to use verifyNew multiple times just as with verify in standard Mockito (issue 251)
 * Mockito extension API now supports mocking and stubbing equals and hashcode.
+* Fixed an issue in the core mock classloader that accidentally caused the previous deferred packages to be overwritten when adding new packages to be ignored.
 
 Change log 1.3.7 (2010-03-22)
 -----------------------------
